[package]
name = "row-bf-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
siphasher = "1.0.1"
fastbloom = "0.8"
flate2 = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
axum = { version = "0.7" }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1.0"